# seller_products

./: .dockerignore  .env.dist  .env.prod  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
scripts/: enter_db.sh  entrypoint.sh
src/: conftest.py  main.py  scripts.py
src/config/: settings.py
src/database/: db.py  decorators.py  dependencies.py  exceptions.py  models.py
src/database/services/: deletes.py  inserts.py  selectors.py  structs.py
src/database/tests/: test_models.py
src/exceptions/: base_exc.py
src/migrations/: env.py
src/migrations/versions/: 0ceed38fc348_created_product_table.py  c65b3f4afea1_created_product_and_seller_tables.py  f86c8643173d_created_tables.py  fc5c9909c95a_removed_column_product_available.py
src/products/: dependecies.py  dependencies.py  schemas.py  views.py
src/products/services/: download_xlsx_file.py  normalizer_xlsx_link.py  selectors.py  update_products.py  validation_mixin.py  xlsx_parser.py
src/products/services/xlsx/: download_xlsx_file.py  (+2 more)
src/router/: custom_router.py  exc_route.py
src/scripts/: __main__.py  state.py
src/tests/: conftest.py
src/tests/test_database/: test_models.py
src/tests/test_products/: test_services.py  test_views.py
src/tests/test_validation/: test_validators.py  test_xlsx_parser.py
src/tests/test_xlsx/: conftest.py  test_validators.py  test_xlsx_file_download.py  test_xlsx_parser.py
src/validation/: decorators.py  exceptions.py  mixin.py  utils.py  validation_mixin.py  validators.py
src/xlsx/: download_xlsx_file.py  exceptions.py  validators.py  xlsx_parser.py  xlsx_validation.py
(+8 files in other folders)
