[tool.poetry]
name = "seller-products"
version = "0.1.0"
description = ""
authors = ["Kirill <pnchkirill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.45"
psycopg2 = "^2.9.5"
alembic = "^1.9.1"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
