[tool.poetry]
name = "seller-products"
version = "0.1.0"
description = ""
authors = ["Kirill <pnchkirill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.45"
psycopg2 = "^2.9.5"
alembic = "^1.9.1"
python-dotenv = "^0.21.0"
typer = {extras = ["all"], version = "^0.7.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
mixer = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [
    ".git",
    ".idea",
    ".venv",
    "scripts",
    "*__pycache__*",
    "*.pytest_cache*",
]
max-complexity = 10
max-line-length = 120


[tool.pytest.ini_options]
addopts = "--strict-markers -p no:cacheprovider"
testpaths = [
    "*tests/",
]
pythonpath = "."

[tool.coverage.run]
omit = [
    "*conftest.py*",
    "*/__init__.py",
    "*/migrations/*",
    "*/tests/",
]

[tool.coverage.report]
omit = [
    "*conftest.py*",
    "*/__init__.py",
    "*/migrations/*",
    "*/tests/*",
]